# my_libsu

./: README.md  build.gradle  build.gradle.kts  gradle.properties  module.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kmxs/reader/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: magisk.sh  xposed_init
app/src/main/cpp/: CMakeLists.txt  CRC32Edit.cpp  export.map  main-injection.cpp
app/src/main/cpp/Injector/: Injector.cpp
app/src/main/cpp/Injector/byopen/: byopen_android.c  prefix.h
app/src/main/cpp/Substrate/: SubstrateHook.cpp
app/src/main/cpp/draw/: Draw.cpp  Draw.h
app/src/main/cpp/hide/: IORelocator.h
app/src/main/cpp/imgui/backends/: imgui_impl_android.cpp
app/src/main/cpp/include/: Engine.h  RC4Utils.h  log.h
app/src/main/cpp/memory/: GameUtils.cpp  GameUtils.h
app/src/main/java/com/kmxs/reader/: App.java
app/src/main/java/com/kmxs/reader/activity/: LogActivity.java  LoginActivity.java  MainActivity.java  ModuleInof.java  SettingActivity.java
app/src/main/java/com/kmxs/reader/bean/: Config.java  DrawStateEvent.java
app/src/main/java/com/kmxs/reader/core/: Config.java
app/src/main/java/com/kmxs/reader/drawable/: drawBack.java  drawButton.java  drawConcave.java  drawProgress.java
app/src/main/java/com/kmxs/reader/greendao/: ConfigDao.java  DaoMaster.java  DaoSession.java
app/src/main/java/com/kmxs/reader/utils/: AnimatorUtils.java  ApkHelper.java  AppConfig.java  AppConfigManger.java  BearHelper.java  ColorDialog.java  ColorUtil.java  DrawPaintManager.java  FileUtils.java  RandomUtils.java  RecorderFakeUtils.java  TimerTaskManager.java
app/src/main/res/color/: text_color_hint.xml  text_input_layout_stroke_color.xml
app/src/main/res/drawable/: hook_false.xml  hook_true.xml  ic_round_check_circle_24.xml  ic_round_settings_24.xml  ic_round_warning_24.xml  ic_set_24.xml  shape_corner.xml
app/src/main/res/drawable-v24/: blue_thumb.xml  blue_track.xml  bt1.xml  button.xml  button_false.xml  button_true.xml  gray_thumb.xml  gray_track.xml  ic_dashboard_black_24dp.xml  provider.xml  toast_bg.xml
app/src/main/res/layout/: acticity_setting.xml  activity_log.xml  activity_login.xml  activity_main.xml  dialog_color.xml  dialog_input.xml  item_fun.xml  module_info.xml
app/src/main/res/raw/: keystore
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: config_filepaths.xml
app/src/test/java/com/kmxs/reader/: ExampleUnitTest.java
baselib/: build.gradle  proguard-rules.pro
baselib/src/androidTest/java/me/simple/lib/: ExampleInstrumentedTest.java
baselib/src/main/: AndroidManifest.xml
baselib/src/main/aidl/me/simple/lib/: IIDataProvider.aidl
baselib/src/main/aidl/me/simple/lib/data/: DrawData.aidl
baselib/src/main/java/es/dmoral/toasty/: SafeHandler.java  Toasty.java  ToastyUtils.java
baselib/src/main/java/me/simple/lib/: BaseContentApp.java
baselib/src/main/java/me/simple/lib/activity/: BaseActivity.java
baselib/src/main/java/me/simple/lib/base/: BaseReponse.java  BaseRequest.java
baselib/src/main/java/me/simple/lib/data/: BoneData.java  Draw3DBox.java  DrawData.java  ItemData.java  PlayerData.java  Vector2A.java  Vector3A.java  Vector3B.java  Vector4A.java  WeaponData.java
baselib/src/main/java/me/simple/lib/exception/: ErrorCode.java  NotClassException.java  ResponseError.java
baselib/src/main/java/me/simple/lib/glview/: BaseConfigChooser.java  ComponentSizeChooser.java  DefaultWindowSurfaceFactory.java  EGLConfigChooser.java  EGLContextFactory.java  EGLWindowSurfaceFactory.java  EglHelper.java  GLThread.java  GLThreadManager.java  GLView.java  GLWrapper.java  ImageReaderSurfaceFactory.java  LogWriter.java  RecordableSurfaceFactory.java  RecorderController.java  Renderer.java  TakePictureController.java
baselib/src/main/java/me/simple/lib/inject/: ActivityManagerServiceHook.java  HookEntry.java  NotifyHook.java  WindowHook.java
baselib/src/main/java/me/simple/lib/injection/: ContextUtil.java  Params.java  RootMain.java  RootUtil.java
baselib/src/main/java/me/simple/lib/jni/: DataProvider.java
baselib/src/main/java/me/simple/lib/net/: ApiService.java  BaseRequestWraper.java  BaseResponse.java  ByteWrapper.java  GsonFunctionMap.java  LoggerInterceptor.java  ResponseParser.java  RetrofitClient.java
baselib/src/main/java/me/simple/lib/services/: BaseForeGroundService.java  DataProviderService.java  RealDataProvider.java
baselib/src/main/java/me/simple/lib/utils/: ActivityManger.java  CrashHandlerUtil.java  CustomDialog.java  CustomProgressDialog.java  DeviceInfoUtils.java  EncrypUtils.java  HttpUtils.java  HttpsUtils.java  ImageUtils.java  ImmersionBar.java  LogUtils.java  RecorderFakeUtils.java  ReflectUtil.java  ReflectUtils.java  ReflectionApiCheck.java  SafeUtils.java  ShellUtils.java  ZipUtil.java
baselib/src/main/java/me/simple/lib/widget/: DialogFactory.java
baselib/src/main/res/: drawable.rar  layout.rar  toasty.rar  tosty.rar  values.rar
baselib/src/main/res/layout/: toast_layout.xml
baselib/src/main/res/values/: strings.xml
baselib/src/test/java/me/simple/lib/: ExampleUnitTest.java
busybox/: build.gradle.kts
busybox/src/main/: AndroidManifest.xml
core/: build.gradle.kts
example/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle
module/src/main/cpp/: CMakeLists.txt  MainEntry.cpp  export.map  zygisk.hpp
module/src/main/cpp/Injector/: bypass.cpp
module/src/main/cpp/draw/: imgui_draw_main.cpp  imgui_draw_main.h
module/src/main/cpp/hide/: IORelocator.cpp  MapsRedirector.cpp  MapsRedirector.h
module/src/main/cpp/imgui/: imgui_draw.cpp  imgui_widgets.cpp
module/src/main/cpp/imgui/backends/: imgui_impl_android.h
module/src/main/cpp/include/: JniUtils.h  Offsets.h  Structs.h  callback.h  https.h
module/src/main/cpp/memory/: MemoryUtils.cpp  MemoryUtils.h
service/: build.gradle.kts
template/magisk_module/: customize.sh  riru.sh
(+21 files in other folders)
